<resources>
    <string name="app_name">module_login</string>
    <string name="login_welcome">欢迎登录</string>
    <string name="login_other_way">其他号码登录</string>
    <string name="login_quick_login">本机号码一键登录</string>
    <string name="login_please_input_phone_number">请输入手机号码</string>
    <string name="login_get_sms_code">获取验证码</string>
    <string name="login_login">手机登录/注册</string>
    <string name="login_login_password">密码登录</string>
    <string name="login_forget_password">忘记密码?</string>
    <string name="login_login_sms">验证码登录</string>
    <string name="login_please_input_sms_code">请输入短信验证码</string>
    <string name="login_input_sms_code_tips">验证码已发送至 +86 %1$s</string>
    <string name="login_edit_profile_title">完善个人信息</string>
    <string name="login_nickname">昵称</string>
    <string name="login_sex">性别</string>
    <string name="login_sex_tips">温馨提示：性别选择将无法更改</string>
    <string name="login_sex_male">男生</string>
    <string name="login_sex_female">女生</string>
    <string name="login_btn_submit_profile">开启神秘之旅</string>
    <string name="login_privacy_exit">不同意并退出APP</string>
    <string name="login_privacy_agree">同意</string>
    <string name="users_note">用户须知</string>
    <string name="privacy_tips_key1">《用户协议》</string>
    <string name="privacy_tips_key2">《隐私协议》</string>
    <string name="privacy_tips_key3">《第三方共享个人信息清单》</string>
    <string name="privacy_tips">
        为了更好的保障您的合法权益，请您阅读并同意《用户协议》和《隐私协议》。未经您的授权同意，我们不会主动向任何第三方共享您的个人信息。您可以通过《第三方共享个人信息清单》了解我们接入第三方SDK及与第三方共享信息的情况。
    </string>
    <string name="confirmed">用户须知已确认</string>
    <string name="opt_terms">用户协议</string>
    <string name="opt_privacy">隐私协议</string>

    <string name="privacy_game_advice">抵制不良游戏，拒绝盗版游戏。 注意自我保护，谨防受骗上当。\n 适度游戏益脑，沉迷游戏伤身。 合理安排时间，享受健康生活。</string>
    <string name="login_phone_number">手机号</string>
    <string name="login_input_mobile">请输入手机号</string>
    <string name="login_input_verify">请输入验证码</string>
    <string name="login_input_password">请输入密码</string>
    <string name="login_input_nickname">请输入昵称</string>
    <string name="login_receive_identity_code">获取验证码</string>
    <string name="login_sign_in_now">立即登录</string>
    <string name="login_invite_code_hint">为了提高账号安全，请输入邀请码</string>
    <string name="login_invite_code">邀请码</string>
    <string name="login_input_invite_code">请输入邀请码</string>
    <string name="login_sign_up_now">立即注册</string>

    <string name="login_account_create">账号注册</string>
    <string name="login_account_create_hint">为了提高账号安全，请设置不小于8位数字与字母的密码</string>
    <string name="login_password">登录密码</string>
    <string name="login_hint_input_password">请输入登录密码</string>
    <string name="login_confirm">确认</string>

    <string name="login_verify_by_phone">使用已注册的手机号验证</string>
    <string name="login_find_password">找回密码</string>
    <string name="login_phone_verified">注册手机号</string>
    <string name="login_hint_input_mobile">请输入手机号</string>
    <string name="login_next_step">下一步</string>
    <string name="login_improve_account_security">为了提高账号安全 请设置不小于8位数字与字母的密码</string>
    <string name="login_new_password">请输入新登录密码</string>
    <string name="login_new_password_again">请再次输入新登录密码</string>
    <string name="login_phone_num_incorrect_or_not_registered">手机号有误或未注册</string>
</resources>