<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="m"
            type="com.kissspace.login.viewmodel.ForgetPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <com.hjq.bar.TitleBar
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:barStyle="transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:leftHorizontalPadding="16dp"
            app:leftIcon="@mipmap/common_icon_back_white"
            app:lineVisible="false"
            app:title="@string/login_find_password" />

        <TextView
            android:id="@+id/tv_phone_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/login_verify_by_phone"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_bar" />


        <LinearLayout
            android:id="@+id/ll_phone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/common_bg_black23_radius15"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_phone_verify">


        </LinearLayout>

        <TextView
            android:id="@+id/tv_phone_verified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/login_phone_verified"
            android:textColor="@color/color_5A60FF"
            android:textSize="17sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/ll_phone"
            app:layout_constraintLeft_toLeftOf="@id/ll_phone"
            app:layout_constraintTop_toTopOf="@id/ll_phone" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:afterTextChanged="@{m.onPhoneTextChange}"
            android:background="@null"
            android:gravity="center|left"
            android:hint="@string/login_hint_input_mobile"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="11"
            android:singleLine="true"
            android:text="@={m.phoneNumber}"
            android:textColor="@color/white"
            android:textColorHint="@color/color_AAAAAA"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/ll_phone"
            app:layout_constraintLeft_toRightOf="@id/tv_phone_verified"
            app:layout_constraintRight_toRightOf="@id/ll_phone"
            app:layout_constraintTop_toTopOf="@id/ll_phone" />


        <LinearLayout
            android:id="@+id/ll_verify_out"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_phone">

            <LinearLayout
                android:id="@+id/ll_verify"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="3"
                android:background="@drawable/common_bg_black23_radius15"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_verify"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:afterTextChanged="@{m.onVerifyTextChange}"
                    android:background="@null"
                    android:gravity="center|left"
                    android:hint="@string/login_input_verify"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@={m.verificationCode}"
                    android:textColor="@color/white"
                    android:textColorHint="@color/color_AAAAAA"
                    android:textSize="15sp" />


            </LinearLayout>

            <Button
                android:id="@+id/btn_verify"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="2"
                android:background="@drawable/common_btn_selector_black23_radius15_stroke2"
                android:enabled="@{m.sendSmsEnable}"
                android:gravity="center"
                android:text="@string/login_get_sms_code"
                android:textColor="@drawable/common_text_color_selector_white"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>


        <Button
            android:id="@+id/btn_next"
            commonBtnState="@{m.btnEnable}"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/common_btn_selector_blue_black_radius15"
            android:text="@string/login_next_step"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>