<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_dialog_privacy_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:text="服务条款和隐私协议"
            android:textColor="@color/common_white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_privacy_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/privacy_tips"
            android:textColor="@color/common_white"
            android:textSize="@dimen/sp_15"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_note" />


        <TextView
            android:id="@+id/tv_agree"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="17dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/common_bg_blue"
            android:gravity="center"
            android:text="@string/login_privacy_agree"
            android:textColor="@color/common_white"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_not_agree"
            android:layout_width="match_parent"
            android:background="@drawable/common_selector_gray_stroke"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_17"
            android:textStyle="bold"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="17dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/login_privacy_exit"
            />

    </LinearLayout>
</layout>