<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="m"
            type="com.kissspace.login.viewmodel.ForgetPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <com.hjq.bar.TitleBar
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:barStyle="transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:leftHorizontalPadding="16dp"
            app:title="@string/login_find_password"
            app:leftIcon="@mipmap/common_icon_back_white"
            app:lineVisible="false" />

        <TextView
            android:id="@+id/tv_phone_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/login_improve_account_security"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_bar" />


        <EditText
            android:id="@+id/cet_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/common_bg_black23_radius15"
            android:gravity="center|left"
            android:hint="@string/login_new_password"
            android:imeOptions="actionNext"
            android:text="@={m.password}"
            android:afterTextChanged="@{m.onPswTextChange}"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/color_AAAAAA"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_phone_verify" />


        <EditText
            android:id="@+id/cet_psw_again"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/common_bg_black23_radius15"
            android:gravity="center|left"
            android:hint="@string/login_new_password_again"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:text="@={m.confirmPwd}"
            android:afterTextChanged="@{m.onPswTextChange}"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/color_AAAAAA"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="@id/cet_psw"
            app:layout_constraintRight_toRightOf="@id/cet_psw"
            app:layout_constraintTop_toBottomOf="@id/cet_psw" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/common_btn_selector_blue_radius15"
            android:text="@string/common_confirm"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/cet_psw"
            app:layout_constraintRight_toRightOf="@id/cet_psw" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>